# TradeBot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  ClientAccount.cpp  ClientBrain.cpp  ClientBroker.cpp  ClientData.cpp
Client/inc/: Client.h  ClientAccount.h  ClientBrain.h  ClientBroker.h  ClientData.h
Data/: CMakeLists.txt  DataHarvest.cpp
Trader/: CMakeLists.txt  Trader.cpp
